Fri Oct  8 13:37:40 2004  Tim Janik  <timj@gtk.org>

	* bsepcmmodule.c: check for a readable pcm device upon resetting the
	PCM input module. handle partial read requests. properly zero initialize
	newly allocated structures. 

	* bseserver.[hc]: implemented bse_server_require_pcm_input(), which
	issues an appropriate warning if PCM recordingis reduced to a silent
	input stream.

Fri Oct  8 11:38:07 2004  Tim Janik  <timj@gtk.org>

	* bsedefs.h: don't include <math.h>. files needing math functions
	should include <bse/bsemath.h> instead.

	* bsemath.[hc]: removed BSE_EPSILON_CMP().
	moved contents from gslmath.h and gslmath.c here and changed namespace
	to bse. adapted users.

	* bseieee754.h: changed namespace to bse, adapted users.
	use signbit() if available.

	* bsemathsignal.[hc]: changed namespace to bse, adapted users.

	* gslmath.h, gslmath.c, gslsignal.h, gslsignal.c, gslieee754.h: removed.

	* gsl-fftconf.sh: include bsemath.h in generated source.

	* tests/mathtests.c: disabled ellipsis and complex root finding tests.

Fri Oct  8 10:01:37 2004  Tim Janik  <timj@gtk.org>

	* bseieee754.h: CVS copied from gslieee754.h.

Fri Oct  8 09:55:43 2004  Tim Janik  <timj@gtk.org>

	* bsemathsignal.h: CVS copied from gslsignal.h.

	* bsemathsignal.c: CVS copied from gslsignal.c.

Fri Oct  8 06:52:09 2004  Tim Janik  <timj@gtk.org>

	* bsesequencer.cc:
	* gslloader-aiff.c:
	* bseenginemaster.c: use g_static_assert().

Mon Oct  4 03:46:52 2004  Tim Janik  <timj@gtk.org>

	* bsestorage.c: fixed version string parsing.

	* bsecore.idl: provide user-message types and record.

	* bseserver.[hc]: extended user message notifications.

	* bsemain.c:
	* bsesequencer.cc:
	* bseenginemaster.c: set log handler for the various threads.

Sat Oct  2 21:12:13 2004  Tim Janik  <timj@gtk.org>

	* *.c: adapt to logging API changes.

Wed Sep 29 21:01:28 2004  Tim Janik  <timj@gtk.org>

	* bsesequencer.cc: make wake-up pipe non-blocking. properly wake up