@@ -1,8 +1,6 @@
 FIXMES:	(release-critical)
 - midi csynth does not work anymore (anable multi-voices like in tracks?)
 - a single CSynth with auto-activate and without a song dosn't keep playback
-- pcmmodule input->reset() should queue a server check for !pcm-handle->readable which then throws a warning (dialog)
-- implement sequencer underrun detection
 - don't record samples to WAV file before *any* song is processed by sequencer
 - midireceiver: vswitch with note-off + disconnected (due to mixer) should become idle
 - midireceiver: revisit sched_tag as condition, it's probably too weak due to temporary enginescheduler resets
